releases/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.k8s.nickysemenza.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cf-access-auth
  namespace: system
spec:
  forwardAuth:
    address: "http://traefik-auth-cloudflare.default.svc.cluster.local/auth/c23fdb6f024e88908a4a8fabee5c821db65f7017ba4ae9996279d893f7e79405"
